# fluidlite-qtmultimedia

./: .gitmodules  CMakeLists.txt  README.md
cmdlnsynth/: CMakeLists.txt  main.cpp
guisynth/: CMakeLists.txt  customcombobox.cpp  customcombobox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
libcommon/: CMakeLists.txt  programsettings.cpp  programsettings.h  synthcontroller.cpp  synthcontroller.h  synthrenderer.cpp  synthrenderer.h
